--- a/index.html
+++ b/index.html
@@ -10,6 +10,20 @@
   <body>
     <h1>Discover hidden places in the world around you</h1>
     <p><a href="">Download Excursion (Coming soon!)</a></p>
-	<script src="index.js"></script>
+    <video autoplay muted loop>
+        <source src="resources/video/excursion.mp4" type="video/mp4">
+    </video>
+    <h2>Your personal travel guide</h2>
+    <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
+    <p><img src="resources/images/camp.webp"></p>
+    <p><img src="resources/images/phone.png"></p>
+    <h2>Coming Soon for iPhone and Android</h2>
+    <p><a href="">Download Excursion (Coming soon!)</a></p>
+
+    <footer>
+        <p>© Excursion</p>
+    </footer>
+
+    <script src="index.js"></script>
   </body>
 </html>
