--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
   <body>
     <h1>Discover hidden places in the world around you</h1>
     <p><a href="">Download Excursion (Coming soon!)</a></p>
-    <video autoplay muted loop>
-        <source src="resources/video/excursion.mp4" type="video/mp4">
-    </video>
+    <div class="autovideo">
+        <video autoplay muted loop>
+            <source src="resources/video/excursion.mp4" type="video/mp4">
+        </video>
+    </div>
     <h2>Your personal travel guide</h2>
     <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
     <p><img src="resources/images/camp.webp"></p>
